Update config.toml tenp

--- a/config.toml
+++ b/config.toml
@@ -47,8 +47,8 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 [YouTube-Extended]
 enabled = true
 app-name = "YouTube"
-patches-source = "anddea/revanced-patches"
-cli-source = "anddea/revanced-cli"
+patches-source = "inotia00/revanced-patches"
+cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
