--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,11 @@ uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 
+[Spotify-Extended]
+uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
+patches-source = "anddea/revanced-patches"
+
 # https://github.com/j-hc/revanced-magisk-module/issues/554
 [Music-Extended]
 enabled = true
@@ -77,5 +82,5 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 arch = "arm64-v8a"
 
 [IconPackStudio]
-enabled = false
+enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
