--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,9 @@ version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photos/"
 uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 
+[SoundCloud]
+uptodown-dlurl = "https://soundcloud.en.uptodown.com/android"
+
 [Spotify]
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
