--- a/config.toml
+++ b/config.toml
@@ -6,17 +6,12 @@ parallel-jobs = 3
 
 # you can use rvmm-config-gen to generate a config
 
-[Duolingo]
-enabled = true
-apkmirror-dlurl = "https://www.apkmirror.com/apk/duolingo/duolingo-duolingo/"
-uptodown-dlurl = "https://duolingo.en.uptodown.com/android"
-
 [YouTube]
 build-mode = "both"
 excluded-patches = ""
 included-patches = ""
 version = "auto"
-patcher-args = " -e 'GmsCore support' -OpackageNameYouTube='yt.rvx.BM' "
+patcher-args = " -e 'GmsCore support' -OpackageNameYouTube='yt.rv.BM' "
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
@@ -24,7 +19,7 @@ archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.y
 [Music]
 build-mode = "both"
 arch = "both"
-patcher-args = " -e 'GmsCore support' -OpackageNameYouTubeMusic='ytm.rvx.BM' "
+patcher-args = " -e 'GmsCore support' -OpackageNameYouTubeMusic='ytm.rv.BM' "
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
@@ -52,29 +47,31 @@ archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/spotify-ab/spotify-music-podcasts/"
 patches-source = "anddea/revanced-patches"
 
+[YouTube-Extended]
+enabled = true
+app-name = "YouTube"
+patches-source = "anddea/revanced-patches"
+cli-source = "anddea/revanced-cli"
+patcher-args = " -e 'GmsCore support' -OpackageNameYouTube='yt.rvx.BM' "
+rv-brand = "ReVanced Extended"
+build-mode = "both"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
+uptodown-dlurl = "https://youtube.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+
 # https://github.com/j-hc/revanced-magisk-module/issues/554
 [Music-Extended]
 enabled = true
 app-name = "Music"
 patches-source = "anddea/revanced-patches"
-cli-source = "inotia00/revanced-cli"
+cli-source = "anddea/revanced-cli"
+patcher-args = " -e 'GmsCore support' -OpackageNameYouTubeMusic='ytm.rvx.BM' "
 rv-brand = "ReVanced Extended"
 build-mode = "both"
 arch = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
-
-[YouTube-Extended]
-enabled = true
-app-name = "YouTube"
-patches-source = "anddea/revanced-patches"
-cli-source = "inotia00/revanced-cli"
-rv-brand = "ReVanced Extended"
-build-mode = "both"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
-uptodown-dlurl = "https://youtube.en.uptodown.com/android"
-archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 
 [Twitch]
 enabled = true
@@ -107,3 +104,8 @@ arch = "arm64-v8a"
 [IconPackStudio]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
+
+[Duolingo]
+enabled = true
+apkmirror-dlurl = "https://www.apkmirror.com/apk/duolingo/duolingo-duolingo/"
+uptodown-dlurl = "https://duolingo.en.uptodown.com/android"
