--- a/config.toml
+++ b/config.toml
@@ -91,6 +91,7 @@ enabled = true
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
 
+# Meta
 [Facebook]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
@@ -100,6 +101,12 @@ arch = "arm64-v8a"
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 arch = "arm64-v8a"
+
+[Instagram]
+apkmirror-dlurl = "https://apkmirror.com/apk/instagram/instagram-instagram/"
+included-patches = "'Hide ads' 'Sanitize sharing links' 'Disable signature check'"
+arch = "arm64-v8a"
+exclusive-patches = true
 
 [IconPackStudio]
 enabled = true
