--- a/config.toml
+++ b/config.toml
@@ -89,7 +89,8 @@ enabled = true
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
 
-# Meta
+# Meta Apps
+
 [Facebook]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
