--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,8 @@ parallel-jobs = 3
 
 [Lightroom]
 apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
+uptodown-dlurl = "https://adobe-lightroom.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.adobe.lrmobile"
 
 [YouTube]
 build-mode = "both"
@@ -95,15 +97,21 @@ included-patches = "'SIM spoof'"
 [Facebook]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
+uptodown-dlurl = "https://facebook.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.katana"
 arch = "arm64-v8a"
 
 [Messenger]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
+uptodown-dlurl = "https://facebook-messenger.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.orca"
 arch = "arm64-v8a"
 
 [Instagram]
 apkmirror-dlurl = "https://apkmirror.com/apk/instagram/instagram-instagram/"
+uptodown-dlurl = "https://instagram.en.T.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.instagram.android"
 included-patches = "'Hide ads' 'Sanitize sharing links' 'Disable signature check'"
 arch = "arm64-v8a"
 exclusive-patches = true
