--- a/config.toml
+++ b/config.toml
@@ -7,8 +7,10 @@ parallel-jobs = 3
 # you can use rvmm-config-gen to generate a config
 
 [Lightroom]
+enabled = false # Disabling due to 403 download errors
 apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
-uptodown-dlurl = "https://adobe-lightroom-mobile.en.uptodown.com/android"
+uptodown-dlurl = "https://adobe-lightroom.en.uptodown.com/android"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.adobe.lrmobile"
 
 [YouTube]
 build-mode = "both"
@@ -76,7 +78,7 @@ uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
 
 [Twitch]
-enabled = true
+enabled = false # Disabling due to 'ABORT: unreachable' crash
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
@@ -89,7 +91,7 @@ dpi = "120-640dpi"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
 
 [TikTok]
-enabled = false
+enabled = false # Disabling due to 'ABORT: unreachable' crash
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly"
 uptodown-dlurl = "https://tiktok.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
@@ -107,23 +109,23 @@ uptodown-dlurl = "https://duolingo.en.uptodown.com/android"
 #Meta Apps
 
 [Facebook]
-enabled = false
+enabled = false # Disabling due to 403/404 download errors
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
 uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.katana"
 arch = "arm64-v8a"
 
 [Messenger]
-enabled = false
+enabled = false # Disabling due to 'ABORT: unreachable' crash
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 uptodown-dlurl = "https://facebook-messenger.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.orca"
 arch = "arm64-v8a"
 
 [Instagram]
-enabled = false
+enabled = false # Disabling this one proactively, as it's a Meta app and likely to fail
 apkmirror-dlurl = "https://apkmirror.com/apk/instagram/instagram-instagram/"
-uptodown-dlurl = "https://instagram.en.T.com/android"
+uptodown-dlurl = "https://instagram.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.instagram.android"
 included-patches = "'Hide ads' 'Sanitize sharing links' 'Disable signature check'"
 arch = "arm64-v8a"
