--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,13 @@ parallel-jobs = 10
 # you can use rvmm-config-gen to generate a config
 
 [Lightroom]
-enabled = false # Disabling due to 403 download errors
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
 uptodown-dlurl = "https://adobe-lightroom.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.adobe.lrmobile"
 
 [YouTube]
+enabled = true # Keep Google app enabled
 build-mode = "both"
 version = "auto"
 patcher-args = " -e 'GmsCore support' -OpackageNameYouTube='yt.rv.BM' "
@@ -21,6 +22,7 @@ uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 
 [Music]
+enabled = true # Keep Google app enabled
 build-mode = "both"
 arch = "both"
 patcher-args = " -e 'GmsCore support' -OpackageNameYouTubeMusic='ytm.rv.BM' "
@@ -29,6 +31,7 @@ uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
 
 [GooglePhotos]
+enabled = true # Keep Google app enabled
 build-mode = "both"
 arch = "both"
 version = "auto"
@@ -36,23 +39,26 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photos/"
 uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
 
 [SoundCloud]
+enabled = false # Disabling non-Google/Spotify
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/soundcloud/soundcloud-soundcloud/"
 uptodown-dlurl = "https://soundcloud.en.uptodown.com/android"
 
 [Spotify]
+enabled = true # Keep Spotify app enabled
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/spotify-ab/spotify-music-podcasts/"
 
 [Spotify-Extended]
+enabled = true # Keep Spotify app enabled
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/spotify-ab/spotify-music-podcasts/"
 patches-source = "inotia00/revanced-patches"
 
 [YouTube-Extended]
-enabled = true
+enabled = true # Keep Google app enabled
 app-name = "YouTube"
 patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
@@ -65,7 +71,7 @@ archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.y
 
 # https://github.com/j-hc/revanced-magisk-module/issues/554
 [Music-Extended]
-enabled = true
+enabled = true # Keep Google app enabled
 app-name = "Music"
 patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
@@ -78,52 +84,52 @@ uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
 
 [Twitch]
-enabled = false # Disabling due to 'ABORT: unreachable' crash
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
 
 [Twitter]
-enabled = false
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 build-mode = "apk"
 dpi = "120-640dpi"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
 
 [TikTok]
-enabled = false # Disabling due to 'ABORT: unreachable' crash
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly"
 uptodown-dlurl = "https://tiktok.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
 
 [IconPackStudio]
-enabled = true
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
 [Duolingo]
-enabled = true
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/duolingo/duolingo-duolingo/"
 uptodown-dlurl = "https://duolingo.en.uptodown.com/android"
 
 #Meta Apps
 
 [Facebook]
-enabled = false # Disabling due to 403/404 download errors
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
 uptodown-dlurl = "https://facebook.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.katana"
 arch = "arm64-v8a"
 
 [Messenger]
-enabled = false # Disabling due to 'ABORT: unreachable' crash
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 uptodown-dlurl = "https://facebook-messenger.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.facebook.orca"
 arch = "arm64-v8a"
 
 [Instagram]
-enabled = false # Disabling this one proactively, as it's a Meta app and likely to fail
+enabled = false # Disabling non-Google/Spotify
 apkmirror-dlurl = "https://apkmirror.com/apk/instagram/instagram-instagram/"
 uptodown-dlurl = "https://instagram.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.instagram.android"
