Update patches source for Spotify and YouTube apps
inotia00 EOL

--- a/config.toml
+++ b/config.toml
@@ -55,12 +55,12 @@ enabled = true # Keep Spotify app enabled
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/spotify-ab/spotify-music-podcasts/"
-patches-source = "inotia00/revanced-patches"
+patches-source = "anddea/revanced-patches"
 
 [YouTube-Extended]
 enabled = true # Keep Google app enabled
 app-name = "YouTube"
-patches-source = "inotia00/revanced-patches"
+patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 patcher-args = " -e 'GmsCore support' -OpackageNameYouTube='yt.rvx.BM' "
@@ -73,7 +73,7 @@ archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.y
 [Music-Extended]
 enabled = true # Keep Google app enabled
 app-name = "Music"
-patches-source = "inotia00/revanced-patches"
+patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 patcher-args = " -e 'GmsCore support' -OpackageNameYouTubeMusic='ytm.rvx.BM' "
